--- a/src/theme/hj/top.html
+++ b/src/theme/hj/top.html
@@ -2,7 +2,8 @@
   (master_doc, "首页", null, "首页"),
   ("tutorials/best-practice/index", "最佳编码实践", null, "最佳编码实践"),
   ("html/index", "HTML & CSS", null, "HTML & CSS"),
-  ("js/index", "JavaScript", null, "JavaScript")
+  ("js/index", "JavaScript", null, "JavaScript"),
+  ("hjs/index", "HJS", null, "HJS"),
 ] %}
 
 
