--- a/src/theme/hj/top.html
+++ b/src/theme/hj/top.html
@@ -1,9 +1,9 @@
 {% set rellinks = [
   (master_doc, "首页", null, "首页"),
   ("tutorials/best-practice/index", "最佳编码实践", null, "最佳编码实践"),
+  ("resources/css/manual/index", "CSS参考手册", null, "CSS参考手册"),
   ("html/index", "HTML & CSS", null, "HTML & CSS"),
-  ("js/index", "JavaScript", null, "JavaScript"),
-  ("hjs/index", "HJS", null, "HJS"),
+  ("js/index", "JavaScript", null, "JavaScript")
 ] %}
 
 
