--- a/css3-shapes.html
+++ b/css3-shapes.html
@@ -2,10 +2,18 @@
 <html>
 <title>CSS3 Shapes</title>
 <style type="text/css">
-
+.triangle-up{
+  width: 0;
+	height: 0;
+	border-left: 50px solid transparent;
+	border-right: 50px solid transparent;
+	border-bottom: 100px solid red;
+}
 </style>
 
 <body>
+
+<div class="triangle-up"></div>
 
 </body>
 
